// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionInfo /> should render price element 1`] = `
<ul
  class="common__grid sg-10l9eav-root-noWrap-info"
>
  <li
    aria-hidden="true"
    class="sg-xljr6b-root"
  >
    Label: 
    p
  </li>
  <div
    hidden=""
    id="some-id"
  >
    
    price.label
    Some Text
  </div>
</ul>
`;

exports[`<OptionInfo /> should render required element 1`] = `
<ul
  class="common__grid sg-10l9eav-root-noWrap-info"
>
  <li
    aria-hidden="true"
    class="sg-5qovnk-root"
  >
    <span>
      common.required
    </span>
  </li>
  <div
    hidden=""
    id="some-id"
  >
    common.required
    
    Some Text
  </div>
</ul>
`;
